<resources>
    <string name="app_name">MinistryDiary</string>
    <string name="contact_image_button">get contact</string>
    <string name="call_image_button">call contact</string>
    <string name="name_hint">Name</string>
    <string name="address_hint">Address</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="title_hint">Title/Passage Read</string>
    <string name="question_box_hint">Question Left</string>
    <string name="placement">Placement</string>
    <string name="book_brochure">Book/Brochure</string>
    <string name="watchtower">Watchtower</string>
    <string name="awake">Awake</string>
    <string name="tracts">Tract</string>
    <string name="bs_study_material_hint">Study Material</string>
    <string name="teach_book">Teach Book</string>
    <string name="good_news">Goodnews</string>
    <string name="God_s_love">Remain in God\'s Love</string>
    <string name="live_forever">Live Forever</string>
    <string name="Jehovah_s_will">Who are doing Jehovah\'s Will Today?</string>
    <string name="date_of_next_visit">Date of next visit</string>
    <string name="time_of_next_visit">Time of next visit</string>
    <string name="not_visiting">Not Visiting Today</string>
    <string name="visiting">Visiting Today</string>
    <string name="no_return_visit">NO RETURN VISIT.\nClick "+" sign to add Return Visit</string>
    <string name="add_return_visit">Add</string>
    <string name="no_phone_number">No PhoneNumber</string>
    <string name="edit_return_visit">Edit</string>
    <string name="save">Save</string>
    <string name="delete_return_visit">Delete</string>
    <string name="chapter_lesson_hint">Chapter/Lesson</string>
    <string name="paragraph_hint">Paragraph</string>
    <string name="no_bible_student">NO BIBLE STUDENT.\nClick + sign to add Bible Student</string>
    <string name="move_to_bs">Move to Bible Student</string>
    <string name="visited">Visited</string>
    <string name="visiting_rv_message">Return Visits you plan on visiting \nare displayed here.</string>
    <string name="return_visits">Return Visits</string>
    <string name="visiting_bs_message">Bible Students you plan on studying \nare displayed here.</string>
    <string name="bible_students">Bible Students</string>
    <string name="date_hint">Date of Next Visit</string>
    <string name="time_hint">Time of Next Visit</string>
    <string name="video_showing">Video Showing</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="bible_studies">Bible Studies</string>
    <string name="add_report">Add Report</string>
    <string name="edit_report">Edit Report</string>
    <string name="pop_menu">⋮</string>
    <string name="delete_report">Delete Report</string>
    <string name="report_message_view">Add a new report using the + sign</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="bible_read">Bible Read</string>
    <string name="no_reports_view">No Reports for this month</string>
    <string name="other_title">Title</string>
    <string name="no_address">No Address</string>
    <string name="no_study_material">No Study Material</string>
    <string name="no_chapter_lesson_to_study">No Chapter or Lesson to study</string>
    <string name="no_paragraph">No Paragraph</string>
    <string name="no_placement">No Placement</string>
    <string name="no_title">No Title or Passage read</string>
    <string name="no_question_to_answer">No question to answer</string>
    <string name="send_report">Send Report</string>
    <string name="report">Hello, \nThis is my report for %1$s.\n\nPlacement: %2$s\nVideo Showing: %3$s
    \nHours: %4$s\nReturn Visits: %5$s\nBible Studies: %6$s \n\nThis was sent with MinistryDiary.</string>
    <string name="no_bs_to_visit">NO BIBLE STUDENT TO VISIT TODAY</string>
    <string name="no_rv_to_see_">NO RETURN VISIT TO SEE TODAY.</string>
    <string name="all_list">Show all</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="empty_message">Hey! No information provided. </string>
    <string name="dial_error">There is no number to dial</string>
    <string name="new_bs">New Bible Student</string>
    <string name="new_rv">New Return Visit</string>
    <string name="edit_bs">Edit Bible Student</string>
    <string name="edit_rv">Edit Return Visit</string>
    <string name="added_bible_student">Bible Student Added</string>
    <string name="edited_bible_student">Bible Student Edited</string>
    <string name="deleted_bible_student">Bible Student Deleted</string>
    <string name="added_return_visit">Return Visit Added</string>
    <string name="edited_return_visit">Return Visit Edited</string>
    <string name="deleted_return_visit">Return Visit Deleted</string>
    <string name="move_rv_to_bs_error">This return visit can\'t be moved to bible student. No information provided.</string>
</resources>
